k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: borbulhas-admin
  labels:
    app.kubernetes.io/name: borbulhas-admin
